complete qrcode (run in localhost:3000/qr)

--- a/views/qr.ejs
+++ b/views/qr.ejs
@@ -13,7 +13,7 @@
 <body>
 <div style="margin-left: 10px;color:#556B2F;font-size:30px;font-weight: bolder;">方式一、扫码支付</div>
 <br/>
-<img alt="扫码支付" src="" style="width:150px;height:150px;"/>
+<img alt="扫码支付" src="<%= qrcode %>" style="width:150px;height:150px;"/>
 <div style="margin-left: 10px;color:#556B2F;font-size:30px;font-weight: bolder;">方式二、跳转到FlashPay支付</div>
 <br/>
 <button onclick="redirect('')">跳转
