--- a/views/qr.ejs
+++ b/views/qr.ejs
@@ -16,7 +16,7 @@
 <img alt="扫码支付" src="<%= qrcode %>" style="width:150px;height:150px;"/>
 <div style="margin-left: 10px;color:#556B2F;font-size:30px;font-weight: bolder;">方式二、跳转到FlashPay支付</div>
 <br/>
-<button onclick="redirect('')">跳转
+<button onclick="redirect('<%= pay_url %>')">跳转
 </button>
 </body>
 </html>
